Fix: deposit-history pagination visible

--- a/src/mobile/styles/components/TradingTabs.pcss
+++ b/src/mobile/styles/components/TradingTabs.pcss
@@ -2,6 +2,7 @@
   background: var(--main-background-color);
   display: flex;
   height: 100%;
+  padding-bottom: 35px;
   width: 100%;
 
   .cr-tab-panel {
